[package]
name = "blurhash"
description = "A pure Rust implementation of blurhash"
documentation = "https://docs.rs/blurhash"
repository = "https://github.com/whisperfish/blurhash-rs"
readme = "README.md"
keywords = ["blurhash", "image"]
license = "Apache-2.0/MIT"
version = "0.1.1"
authors = ["Raincal <cyj94228@gmail.com>"]
edition = "2018"

[dependencies]
image = { version = "0.23", optional = true }

[dev-dependencies]
image = "0.23"
criterion = "0.5"

[features]
default = []
image = [ "dep:image" ]

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
