[package]
name = "blurhash-rs-wasm"
version = "0.1.0"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>", "Raincal <cyj94228@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "fast-linear-to-srgb"]
fast-linear-to-srgb = ["blurhash/fast-linear-to-srgb"]

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = { version = "0.3" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

blurhash = { path = "../", default-features = false, features = []}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
